Report test results using full class and method information, not a pre-processed method-name-sometimes-combined-with-the-class-name thing
* This allows correct matching of method names when searching the stack trace in TestSuiteGrader